# c-questdb-client

./: .bumpversion.cfg  .bumpversion.toml  .clang-format  .gitignore  .gitmodules  BUILD.md  CLAUDE.md  CMAKE_DEPENDENCY.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DEPENDENCY.md  DEV_NOTES.md  README.md  TODO.md  build.rs  cbindgen.toml  examples.doc.export.yaml  examples.manifest.yaml  precommit.sh  proj.bat  proj.py  setup.py
.githooks/: pre-commit
api_seq/: build_svg.sh  c.dot  cpp.dot  seq.dot
ci/: check_docs.py  check_yaml.py  compile.yaml  format_cpp.py  run_all_tests.py  run_fuzz_pipeline.yaml  run_soak_pipeline.yaml  run_tests_pipeline.yaml  run_version_matrix.py
cpp_test/: build_env.h  compile_fail_borrowed_sender_copy.cpp  compile_fail_sender_view_raw.cpp  doctest.h  mock_server.cpp  mock_server.hpp  qwp_mock_c.cpp  (+17 more)
questdb-rs/: Cargo.toml  README.md  build.rs
questdb-rs-ffi/: Cargo.toml  build.rs
questdb-rs-ffi/benches/: ndarr.rs
questdb-rs-ffi/src/: column_sender.rs  decimal.rs  egress.rs  lib.rs  ndarr.rs
questdb-rs/benches/: column_sender.rs  decoder.rs  ndarr.rs
questdb-rs/examples/: auth.rs  auth_tls.rs  basic.rs  db_pool.rs  from_conf.rs  from_env.rs  http.rs  line_protocol_version.rs  oidc_device_auth.rs  polars.rs  protocol_version.rs  qwp_egress_failover.rs  qwp_egress_hits.rs  qwp_egress_latency.rs  qwp_egress_polars.rs  qwp_egress_read.rs  qwp_egress_read_pipelined.rs  qwp_egress_read_wide.rs  qwp_ingress_polars.rs  qwp_ingress_row.rs  qwp_ingress_srvidx.rs  qwp_ws_basic.rs  qwp_ws_chunk_and_query.rs  qwp_ws_error_handling.rs  qwp_ws_failover.rs  qwp_ws_l1_quotes.rs  qwp_ws_shared_pool.rs  qwp_ws_unified_sfa_bench.rs
questdb-rs/examples/bench_json/: mod.rs
questdb-rs/examples/bench_schema/: mod.rs
questdb-rs/examples/bench_srvidx/: mod.rs
questdb-rs/proptest-regressions/ingress/buffer/: qwp.txt
questdb-rs/src/: arrow_meta.rs  arrow_metadata.rs  db.rs  error.rs  gai.rs  ingress.rs  keystore_roots.rs  lib.rs  polars_ffi.rs  pool.rs  tests.rs  timestamp.rs  token_provider.rs
questdb-rs/src/db/: conf.rs  ffi_support.rs
questdb-rs/src/egress/: auth.rs  binds.rs  column.rs  column_kind.rs  config.rs  decoder.rs  error.rs  gorilla.rs  mod.rs  pipelined_reader.rs  query_request.rs  reader.rs  schema.rs  server_event.rs  symbol_dict.rs  tls.rs  tracker.rs  transport.rs
questdb-rs/src/egress/arrow/: convert.rs  mod.rs  polars.rs  reader.rs  schema.rs  tests.rs
questdb-rs/src/egress/wire/: bit_reader.rs  byte_reader.rs  cache_reset.rs  capabilities.rs  header.rs  mod.rs  msg_kind.rs  roles.rs  varint.rs
questdb-rs/src/egress/ws/: client.rs  frame.rs  handshake.rs  mask.rs  mod.rs  nosigpipe.rs
questdb-rs/src/ingress/: arrow.rs  buffer.rs  conf.rs  conn_events.rs  decimal.rs  gorilla.rs  http.rs  http_common.rs  mod.md  mod.rs  ndarr.rs  polars.rs  rejection_events.rs  sender.rs  tests.rs  timestamp.rs  tls.rs
questdb-rs/src/ingress/async_sender/: http.rs  mod.rs
questdb-rs/src/ingress/buffer/: ilp.rs  op_state.rs  qwp.rs
questdb-rs/src/ingress/column_sender/: arrow_batch.rs  chunk.rs  conf.rs  conn.rs  db.rs  encoder.rs  ffi_support.rs  mod.rs  numpy_wire.rs  sender.rs  validity.rs  wire.rs
questdb-rs/src/ingress/sender/: http.rs  mod.rs  qwp_udp.rs  qwp_ws.rs  qwp_ws_async.rs  qwp_ws_codec.rs  qwp_ws_driver.rs  qwp_ws_orphan.rs  qwp_ws_ownership.rs  qwp_ws_publisher.rs  qwp_ws_queue.rs  qwp_ws_sf_queue.rs  qwp_ws_sfa_catchup.rs  qwp_ws_sfa_publisher.rs  qwp_ws_sfa_queue.rs  qwp_ws_sfa_segment.rs  qwp_ws_sfa_slot.rs  qwp_ws_sfa_symbol_dict.rs  tcp.rs
questdb-rs/src/ingress/sync_sender/: http.rs  mod.rs  tcp.rs
questdb-rs/src/oidc/: device.rs  discovery.rs  error.rs  http.rs  mod.rs  render.rs  token.rs  token_store.rs
questdb-rs/src/oidc/device/: tests.rs
questdb-rs/src/oidc/token_store/: tests.rs
questdb-rs/src/tests/: async_http.rs  buffer_opt.rs  column_sender_pool.rs  decimal.rs  f64_serializer.rs  http.rs  json_tests.rs  mock.rs  mod.rs  ndarr.rs  qwp.rs  qwp_decode.rs  qwp_mock.rs  qwp_sender_pool.rs  qwp_ws.rs  qwp_ws_async.rs  qwp_ws_java_golden.rs  qwp_ws_protocol_probe.rs  qwp_ws_publication_probe.rs  qwp_ws_replay_probe.rs  sender.rs  sync_http.rs  sync_sender.rs
questdb-rs/src/tests/interop/: ilp-client-interop-test.json
questdb-rs/src/tests/interop/qwp-unified-ingress/: README.md  m0-equivalent-buffer.hex  m0-equivalent-chunk.hex
questdb-rs/src/tests/interop/qwp-ws-sfa/: README.md  java-two-frame-torn-tail.sfa.hex  java-two-frame.sfa.hex
questdb-rs/src/ws/: crypto.rs  frame.rs  handshake.rs  mask.rs  mod.rs  nosigpipe.rs
questdb-rs/tests/: db_pool_live.rs  egress_failover.rs  egress_live_auth.rs  egress_live_server.rs  egress_live_server_alter_fuzz.rs  egress_live_server_bind_fuzz.rs  egress_live_server_fragmentation_fuzz.rs  egress_live_server_fuzz.rs  egress_pipelined.rs  egress_tls.rs  egress_ws_integration.rs  oidc_device_flow.rs  qwp_egress_bounds_fuzz.rs  qwp_egress_fragmentation_fuzz.rs
questdb-rs/tests/common/: mod.rs
system_test/enterprise_e2e/: .gitignore  PORTING_JAVA_E2E.md  c_client_sidecar.py  conftest.py  pyproject.toml
system_test/enterprise_e2e/tests/: qwp_sql_switch.py  test_arrow_db_failover.py  test_bindings_matrix.py  test_connection_behavior.py  test_demotion_mid_stream.py  test_durable_ack_demote_bound.py  test_durable_ack_failover.py  test_egress_drop_demote_race.py  test_egress_server_info.py  test_failover.py  test_failover_fuzz.py  test_failover_graceful.py  test_orphan_drainer_bindings.py  test_polars_db_failover.py  test_role_bounce_chaos.py  test_sql_failover_lossless.py  test_switch.py  test_switch_fuzz.py  test_switch_roundtrip_crash_repro.py  test_target_filter.py  test_txn_kill9_atomicity.py  test_zone_failover.py
system_test/failover_clients/: Cargo.toml
system_test/soak/workload_rs/: Cargo.toml
system_test/soak/workload_rs/src/: chunk_leg.rs  column_leg.rs  dataframe_leg.rs  egress_leg.rs  gen.rs  journal.rs  legs.rs  lib.rs  main.rs  mixed_leg.rs  stats.rs
system_test/tls_proxy/: Cargo.toml
system_test/tls_proxy/src/: lib.rs  main.rs
(+280 files in other folders)
